--- a/java_project/server/src/prop/mysql.properties
+++ b/java_project/server/src/prop/mysql.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/project_01
+url=jdbc:mysql://localhost:3306/Project_01
 user=root
 password=1234
